--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-	"name": "webvimark/module-user-management",
+	"name": "xvetx/module-user-management",
 	"description": "User with improved RBAC",
 	"autoload": {
 		"psr-4": {
-			"webvimark\\modules\\UserManagement\\": ""
+			"xvetx\\modules\\UserManagement\\": ""
 		}
 	},
 	"require": {
