--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 		}
 	},
 	"require": {
-		"webvimark/components": "^1.0.0",
+		"xvetx/components": "^1.0.0",
 		"webvimark/bootstrap-switch": "^1.0.0",
 		"ikimea/browser": "1.12.0",
 		"webvimark/date-range-picker": "^1.0.0",
