change name space

--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
 	"description": "User with improved RBAC",
 	"authors": [
 		{
-			"name": "Xvetx",
-			"email": "xvetx2013t@gmail.com"
+			"name": "wheelet",
+			"email": "wheelet1228@gmail.com"
 		},
 		{
 			"name": "webvimark"
